--- a/view.html
+++ b/view.html
@@ -118,6 +118,8 @@
         <div class="logo">Schizuuu Store</div>
     </header>
     
+
+   
     <div class="banner">
         <div class="banner-content">
             <h1>Mens Footwear Shoes</h1>
@@ -125,7 +127,13 @@
             <div class="buttons">
                 <button class="btn" onclick="window.location.href='shop.html'">Shop Now</button>
                 <button class="btn">View Collection</button>
-                <button class="btn">Contact Us</button>
+                <button class="btn">Contact Us</button> 
+    <div class="buttons">
+            <button class="btn" onclick="window.location.href='shop.html'">Shop Now</button>
+            <button class="btn">View Collection</button>
+            <button class="btn">Contact Us</button>
+            <button class="btn" onclick="window.location.href='login.html'">Log In</button> <!-- New Log In button -->
+</div>
             </div>
         </div>
         <img src="https://tse3.mm.bing.net/th?id=OIP.Qg-qXSP0vH8pk0QzvmxYPwHaHa&pid=Api&P=0&h=220" alt="Stylish Sneaker" class="shoe-img">
